<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coins"
    tools:context="justinwallace.coinscollection.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Title"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/getCustomerNameTV"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/CustomerNameEditText"
        style="@android:style/Widget.Material.Light.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        tools:targetApi="lollipop"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/getNumOfCoinsTV"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:layout_below="@+id/CustomerNameEditText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/QuarterTV"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:layout_below="@+id/textView3"
        android:layout_toLeftOf="@+id/DimesEditText"
        android:layout_toStartOf="@+id/DimesEditText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DimeTV"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:layout_below="@+id/QuartersEditText"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/NickelTV"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/PennieTV"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:layout_below="@+id/NickelsEditText"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <EditText
        android:id="@+id/QuartersEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/ComputeValueButton"
        android:layout_alignStart="@+id/ComputeValueButton"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/DimesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/QuartersEditText"
        android:layout_alignStart="@+id/QuartersEditText"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/NickelsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        tools:targetApi="lollipop"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/DimesEditText"
        android:layout_alignStart="@+id/DimesEditText" />

    <EditText
        android:id="@+id/PenniesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        tools:targetApi="lollipop"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/NickelsEditText"
        android:layout_alignStart="@+id/NickelsEditText" />

    <Button
        android:id="@+id/ComputeValueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PenniesEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/TotalBTN"
        android:onClick="computeCoinValues"/>

</RelativeLayout>
